# python-project-generator

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  justfile  prek.toml
.github/: dependabot.yml  release_drafter_template.yml
.github/workflows/: prek_update.yml  publish_binaries.yml  release_drafter.yml  testing.yml  testing_fastapi.yml
scripts/: ci_run.sh  ci_run_fastapi.sh
src/: cli.rs  config.rs  dev_dependency_installer.rs  file_manager.rs  github_actions.rs  licenses.rs  main.rs  package_version.rs  project_generator.rs  project_info.rs  python_files.rs  python_package_version.rs  rust_files.rs  utils.rs
src/fastapi/: core_files.rs  docker_files.rs  fastapi_files.rs  fastapi_installer.rs  migration_files.rs  mod.rs  model_files.rs  route_files.rs  service_files.rs  test_files.rs
src/snapshots/: python_project__github_actions__tests__save_ci_testing_fastapi_file_pyo3.snap  python_project__github_actions__tests__save_ci_testing_linux_only_file_pyo3.snap  python_project__github_actions__tests__save_ci_testing_linux_only_file_pyo3_pyrefly.snap  python_project__github_actions__tests__save_ci_testing_multi_os_file_pyo3.snap  python_project__github_actions__tests__save_dependabot_file.snap  python_project__github_actions__tests__save_dependabot_file_daily.snap  python_project__github_actions__tests__save_dependabot_file_monthly.snap  python_project__github_actions__tests__save_dependabot_file_pyo3_daily.snap  python_project__github_actions__tests__save_dependabot_file_pyo3_monthly.snap  python_project__github_actions__tests__save_dependabot_file_pyo3_weekly.snap  python_project__github_actions__tests__save_dependabot_file_pyo3_weekly_wednesday.snap  python_project__github_actions__tests__save_dependabot_file_weekly_no_day.snap  python_project__github_actions__tests__save_dependabot_file_weekly_tuesday.snap  python_project__github_actions__tests__save_deploy_files-2.snap  python_project__github_actions__tests__save_deploy_files.snap  python_project__github_actions__tests__save_docs_publish_file_pixi.snap  python_project__github_actions__tests__save_docs_publish_file_poetry.snap  python_project__github_actions__tests__save_docs_publish_file_pyo3.snap  python_project__github_actions__tests__save_docs_publish_file_setuptools.snap  python_project__github_actions__tests__save_docs_publish_file_uv.snap  python_project__github_actions__tests__save_pixi_ci_testing_linux_only_file.snap  python_project__github_actions__tests__save_pixi_ci_testing_multi_os_file.snap  python_project__github_actions__tests__save_poetry_ci_testing_fastapi_file.snap  python_project__github_actions__tests__save_poetry_ci_testing_linux_only_file.snap  python_project__github_actions__tests__save_poetry_ci_testing_multi_os_file.snap  python_project__github_actions__tests__save_pypi_publish_file.snap  python_project__github_actions__tests__save_pypi_publish_file_pixi.snap  python_project__github_actions__tests__save_pypi_publish_file_pixi_docs.snap  python_project__github_actions__tests__save_pypi_publish_file_poetry.snap  python_project__github_actions__tests__save_pypi_publish_file_poetry_docs.snap  python_project__github_actions__tests__save_pypi_publish_file_pyo3.snap  python_project__github_actions__tests__save_pypi_publish_file_pyo3_docs.snap  python_project__github_actions__tests__save_pypi_publish_file_setuptools.snap  python_project__github_actions__tests__save_pypi_publish_file_setuptools_docs.snap  python_project__github_actions__tests__save_pypi_publish_file_uv.snap  (+93 more)
(+5 files in other folders)
