[package]
name = "python-project-generator"
version = "3.0.0"
edition = "2021"
authors = ["Paul Sanders <paul@paulsanders.dev>"]
description = "Generates a Python project structure."
documentation = "https://github.com/sanders41/python-project-generator"
homepage = "https://github.com/sanders41/python-project-generator"
repository = "https://github.com/sanders41/python-project-generator"
readme = "README.md"
keywords = ["cli", "python", "template"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "python-project"
path = "src/main.rs"

[features]
fastapi = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["color", "suggestions", "derive"] }
colored = "3.0.0"
dirs = "6.0.0"
exponential-backoff = "2.0.0"
indicatif = "0.18.3"
rayon = "1.11.0"
reqwest = { version = "0.12.26", features = ["json", "blocking"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["local-offset"] }

[dev-dependencies]
insta = { version = "1.45.0", features = ["yaml", "filters"] }
tempfile = "3.23.0"
tmp-path = "0.1.2"
