[package]
name = "python-project-generator"
version = "3.1.1"
edition = "2021"
authors = ["Paul Sanders <paul@paulsanders.dev>"]
description = "Generates a Python project structure."
documentation = "https://github.com/sanders41/python-project-generator"
homepage = "https://github.com/sanders41/python-project-generator"
repository = "https://github.com/sanders41/python-project-generator"
readme = "README.md"
keywords = ["cli", "python", "template"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "python-project"
path = "src/main.rs"

[features]
fastapi = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["color", "suggestions", "derive"] }
colored = "3.1.1"
dirs = "6.0.0"
exponential-backoff = "2.0.0"
indicatif = "0.18.3"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.46", features = ["local-offset"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml", "filters"] }
tempfile = "3.24.0"
tmp-path = "0.1.2"
